# RPGgame

./: .gitignore  CMakeLists.txt
include/: AssetManager.hpp  Entity.hpp  Game.hpp  MathFunctions.hpp  TileManager.hpp
resources/levels/: level1.map
src/: AssetManager.cpp  Entity.cpp  Game.cpp  MathFunctions.cpp  TileManager.cpp  main.cpp
